[package]
name = "cellar-core"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create git tag.
version = "0.2.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/cellar/0.1.0/cellar_core/"
repository = "https://github.com/tyrchen/cellar"
homepage = "https://github.com/tyrchen/cellar"
description = """
A password tool for user to derive a large amount of application passwords deterministically based on a passphrase. Cryptographically strong.
"""
readme = "../README.md"
categories = ["cryptography"]
keywords = ["password", "security", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11"
blake2s_simd = "0.5"
c2-chacha = "0.2"
ed25519-dalek = "1.0.0-pre.3"
rand = "0.7"
rust-argon2 = "0.6"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
zeroize = { version = "1", features = ["zeroize_derive"]}

[dev-dependencies]
criterion = "0.3"
quickcheck = "0.9"
quickcheck_macros = "0.8"


[[bench]]
name = "bench_cellar"
harness = false
