[package]
name = "cellar-core"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create git tag.
version = "0.5.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/cellar"
repository = "https://github.com/tyrchen/cellar"
homepage = "https://github.com/tyrchen/cellar"
description = """
A password tool for user to derive a large amount of application passwords deterministically based on a passphrase. Cryptographically strong.
"""
readme = "../README.md"
categories = ["cryptography"]
keywords = ["password", "security", "cryptography"]

[features]
default = ["pkcs8"]
pkcs8 = ["cellar-pkcs8", "ed25519-compact"]


[dependencies]
base64 = "0.13.1"
bincode = "1.3.3"
blake2s_simd = "1.0.0"
c2-chacha = "0.3.3"
certify = "0.5.1"
cellar-pkcs8 = { version = "0.3.0", path = "../../pkcs8", optional = true }
rand = "0.8.5"
rcgen = "0.10.0"
rust-argon2 = "1.0.0"
serde = { version = "1.0.148", features = ["derive"] }
thiserror = "1.0.37"
zeroize = { version = "1.5.7", features = ["zeroize_derive"] }
ed25519-compact = { version = "2.0.2", features = ["ed25519"], optional = true }

[dev-dependencies]
criterion = "0.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"


[[bench]]
name = "bench_cellar"
harness = false
