[package]
name = "cellar"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create git tag.
version = "0.3.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/cellar/0.1.0/cellar/"
repository = "https://github.com/tyrchen/cellar"
homepage = "https://github.com/tyrchen/cellar"
description = """
A password tool for user to derive a large amount of application passwords deterministically based on a passphrase. Cryptographically strong.
"""
readme = "../README.md"
categories = ["command-line-utilities"]
keywords = ["password", "security", "cryptography"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.13"
# cellar-core = { path = "../cellar-core" }
cellar-core = "0.3"
dialoguer = "0.7"
dirs = "3"
structopt = "0.3"
toml = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util"] }
