[package]
name = "cellar"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create git tag.
version = "0.5.2"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/cellar"
repository = "https://github.com/tyrchen/cellar"
homepage = "https://github.com/tyrchen/cellar"
description = """
A password tool for user to derive a large amount of application passwords deterministically based on a passphrase. Cryptographically strong.
"""
readme = "../README.md"
categories = ["command-line-utilities"]
keywords = ["password", "security", "cryptography"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
base64 = "0.21.0"
cellar-core = { version = "0.7.2", path = "../cellar-core" }
dialoguer = "0.10.3"
dirs = "4.0.0"
structopt = "0.3.26"
toml = "0.7.2"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "fs", "io-util"] }
